--- a/frontend/public/scss/catalog.scss
+++ b/frontend/public/scss/catalog.scss
@@ -69,6 +69,17 @@
 #course-catalog-navigation {
     display: flex;
 
+
+    .slide-mobile-filter-overlay {
+        transform: translateX(0%);
+        transition: transform 500ms ease-in-out;
+    }
+
+    .hidden-mobile-filter-overlay {
+        transform: translateX(-100%);
+        transition: transform 500ms ease-in-out;
+    }
+
     .mobile-filter-overlay {
         position: absolute;
         height: 100%;
@@ -78,7 +89,6 @@
         align-items: flex-start;
         gap: 2px;
         flex: 1 0 0;
-        
     }
 
     .container-fluid {
@@ -107,6 +117,7 @@
 
         .catalog-count-animation {
 
+            /* starting ENTER animation */
             .count-enter {
                 right: 0;
                 width: inherit;
