--- a/frontend/public/scss/catalog.scss
+++ b/frontend/public/scss/catalog.scss
@@ -11,7 +11,6 @@
         font: inherit;
         color: inherit;
         cursor: pointer;
-        outline: inherit;
     }
 
     #department-sidebar {
@@ -35,35 +34,44 @@
     
         #department-sidebar-link-list {
             padding-left: 0;
+
+            button {
+                padding: 15px;
+                text-align: left;
+                width: 100%;
+                font-size: 16px;
+                align-self: stretch;
+            }
+
+            .sidebar-link {
+                flex-direction: column;
+                display: flex;
+                gap: 10px;
+                border-radius: 5px;
+                line-height: normal;
+            }
         
             .department-selected-link {
-                display: flex;
-                padding: 15px;
-                flex-direction: column;
-                gap: 10px;
-                align-self: stretch;
-                border-radius: 5px;
-                background: var(--red, #A31F34);
+                background-color: var(--red, #A31F34);
                 color: #FFF;
-                font-size: 16px;
                 font-style: normal;
                 font-weight: 600;
-                line-height: normal;
-
-                button {
-                    text-align: left;
-                }
+                transition: color 300ms ease-in-out;
+                transition: background-color 300ms ease-in-out;
             }
         
             .department-link {
-                display: flex;
-                padding: 15px;
-                flex-direction: column;
                 align-items: flex-start;
-                gap: 10px;
                 font-weight: 400;
-                font-size: 16px;
-                align-self: stretch;
+                background-color: none;
+                color: var(--blue-dark, #03152D);
+                transition: color 300ms ease-out;
+                transition: background-color 300ms ease-out;
+
+                &:hover, :focus {
+                    background-color: var(--grey-lite, #F0F5F7);
+                    color: var(--red, #A31F34);
+                }
 
                 @include media-breakpoint-down(sm) {
                     color: var(--grey-lite, #F0F5F7);
@@ -75,26 +83,27 @@
 #course-catalog-navigation {
     display: flex;
 
-
-    .slide-mobile-filter-overlay {
-        transform: translateX(0%);
-        transition: transform 500ms ease-in-out;
-    }
-
-    .hidden-mobile-filter-overlay {
-        transform: translateX(-100%);
-        transition: transform 500ms ease-in-out;
-    }
-
-    .mobile-filter-overlay {
-        position: absolute;
-        height: 100%;
-        width: 100%;
-        background: var(--blue-dark, #03152D);
-        flex-direction: column;
-        align-items: flex-start;
-        gap: 2px;
-        flex: 1 0 0;
+    @include media-breakpoint-down(sm) {
+        .slide-mobile-filter-overlay {
+            transform: translateX(0%);
+            transition: transform 500ms ease-in-out;
+        }
+    
+        .hidden-mobile-filter-overlay {
+            transform: translateX(-100%);
+            transition: transform 500ms ease-in-out;
+        }
+    
+        .mobile-filter-overlay {
+            position: absolute;
+            height: 100%;
+            width: 100%;
+            background: var(--blue-dark, #03152D);
+            flex-direction: column;
+            align-items: flex-start;
+            gap: 2px;
+            flex: 1 0 0;
+        }
     }
 
     .container-fluid {
@@ -394,7 +403,7 @@
     @include media-breakpoint-down(sm) {
         padding: 20px 0px;
       }
-    h1 {
+    h2 {
         overflow: hidden;
         color: #FFF;
         text-align: center;
