--- a/cms/templates/product_page.html
+++ b/cms/templates/product_page.html
@@ -106,24 +106,24 @@
               <div class="modal-content">
                 <div class="modal-header">
                   <h5 class="modal-title">{{ member.instructor_name }}</h5>
-                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close" onClick="$('#instructor-modal-{{ member.id }}').modal('hide');">
                     <span aria-hidden="true">&times;</span>
                   </button>
                 </div>
                 <div class="modal-body">
-                  <div className="row">
-                    <div className="col col-instructor-photo">
-                      <img className="img-thumbnail" src="{{ feature_img_src member.feature_image_src}}" alt="Photo for {{member.instructor_name}}" />
+                  <div class="row d-flex">
+                    <div class="col col-instructor-photo">
+                      <img class="img-thumbnail" src="{% feature_img_src member.feature_image %}" alt="Photo for {{member.instructor_name}}" />
                     </div>
-                    <div className="col col-instructor-title">
+                    <div class="col col-instructor-title flex-grow-1">
                       <h2>{{member.instructor_name}}</h2>
                       {% if member.instructor_title %}<h3>{{member.instructor_title}}</h3>{% endif %}
         
                       <p>{{member.instructor_bio_short|safe}}</p>
                     </div>
                   </div>
-                  <div className="row">
-                    <div className="col">
+                  <div class="row row-instructor-body">
+                    <div class="col">
                       {% if member.instructor_bio_long %}
                         {{ member.instructor_bio_long|safe }}
                       {% endif %}
