Changes template to display long bio, adds migration to move short bios to long, updates management command to fill short bio with something else to prevent confusion

--- a/cms/templates/product_page.html
+++ b/cms/templates/product_page.html
@@ -153,7 +153,7 @@
                   <div class="member-info">
                     <h3 class="name">{{ member.instructor_name }}</h3>
                     {% if member.instructor_title %}<h4 class="title">{{ member.instructor_title }}</h4>{% endif %}
-                    <div class="description">{{ member.instructor_bio_short|safe }}</div>
+                    <div class="description">{{ member.instructor_bio_long|safe }}</div>
                   </div>
                 </div>
               </li>
