--- a/frontend/public/scss/v2/product-faculty-members.scss
+++ b/frontend/public/scss/v2/product-faculty-members.scss
@@ -57,8 +57,9 @@
       float: left;
       height: 110px;
       width: 110px;
-      border-radius: 50%;
+      border-radius: 5px;
       object-fit: cover;
+      object-position: 50% 0;
       margin-right: 24px;
 
       @include media-breakpoint-down(sm) {
