Feature flagging stuff
- Roll back to original scss files that I'd modified
- .. but put the mods in a v2 folder
- along with a layout-v2.scss that gets added if the feature flag is set
- Added some helper stuff to pull feature flags in Django out of Posthog first
- Flagged the product page template

--- a/cms/templates/product_page.html
+++ b/cms/templates/product_page.html
@@ -7,6 +7,7 @@
 {% block title %}{{ page.title }} | {{ site_name }}{% endblock %}
 
 {% block content %}
+{% if new_design %}
     <div id="main" class="product-page">
       <div class="container">
         <div class="row d-flex flex-row">
@@ -212,4 +213,7 @@
         </div>
       </section>
     </div>
+{% else %}
+<h1>flag is off</h1>
+{% endif %}
 {% endblock %}
