--- a/frontend/public/scss/layout-v2.scss
+++ b/frontend/public/scss/layout-v2.scss
@@ -14,14 +14,14 @@
 @import "slick";
 @import "resource";
 @import "notification";
-@import "user-menu";
+@import "v2/user-menu";
 @import "error";
 @import "expandable";
 @import "dashboard";
 @import "course-cards";
 @import "home";
-@import "product-details";
-@import "product-faculty-members";
+@import "v2/product-details";
+@import "v2/product-faculty-members";
 @import "cart";
 @import "receipt";
 @import "certificates/certificate";
@@ -32,7 +32,7 @@ body {
   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
   color: #000000;
-  background: #f5f5f5;
+  background: white;
   display: flex;
   min-height: 100vh;
   flex-direction: column;
