finishing touches pt 1
- Forgot about the program explainer, added that
- Fixed some font sizing and weight issues
- Fixed size of the info box
- Added program data to the course serializer (if it's a single course we're pulling)
- Finished up feature flag stuff

--- a/frontend/public/scss/product-details.scss
+++ b/frontend/public/scss/product-details.scss
@@ -458,7 +458,7 @@
   font-weight: bold;
   letter-spacing: 0;
   line-height: 20px;
-  text-align: right;
+  text-align: center;
   text-decoration: underline;
   margin-bottom: 0;
 
