--- a/frontend/public/scss/v2/product-details.scss
+++ b/frontend/public/scss/v2/product-details.scss
@@ -233,11 +233,16 @@
 
   #product-info-box {
     padding-bottom: 25px;
-    font-size: 14px;
-    line-height: 20px;
+    font-size: 16px;
+    line-height: 24px;
     color: $black;
     max-width: 380px;
+    height: auto;
 
+    strong {
+      font-weight: 600;
+    }
+    
     @include media-breakpoint-up(lg) {
       padding: 30px 0;
     }
@@ -266,7 +271,7 @@
       }
 
       .font-weight-bold {
-        font-weight: bold;
+        font-weight: 600;
       }
 
       .btn-enrollment-button {
@@ -275,13 +280,15 @@
         padding: 0!important;
       }
 
+      .enrollment-info-box, .program-info-box {
+        margin: 10px 0;
+        padding: 10px 0;
+      }
+
       .enrollment-info-box {
         border: 1px solid #d1d1d1;
         border-left: none;
         border-right: none;
-
-        margin: 10px 0;
-        padding: 10px 0;
 
         .row {
           margin: 20px 0;
@@ -307,6 +314,12 @@
             padding: 3px;
             font-weight: normal;
           }
+        }
+      }
+
+      .program-info-box {
+        ul {
+          margin-top: 1em;
         }
       }
 
