--- a/frontend/public/scss/catalog.scss
+++ b/frontend/public/scss/catalog.scss
@@ -73,7 +73,7 @@
                     color: var(--red, #A31F34);
                 }
 
-                @include media-breakpoint-down(sm) {
+                @include media-breakpoint-down(md) {
                     color: var(--grey-lite, #F0F5F7);
                 }
             }
@@ -83,7 +83,7 @@
 #course-catalog-navigation {
     display: flex;
 
-    @include media-breakpoint-down(sm) {
+    @include media-breakpoint-down(md) {
         .slide-mobile-filter-overlay {
             transform: translateX(0%);
             transition: transform 500ms ease-in-out;
@@ -103,6 +103,7 @@
             align-items: flex-start;
             gap: 2px;
             flex: 1 0 0;
+            z-index: 10;
         }
     }
 
@@ -190,10 +191,6 @@
             line-height: normal;
             flex-direction: row;
             flex-wrap: nowrap;
-
-            // @include media-breakpoint-down(sm) {
-            //     width: 100%;
-            // }
 
             @include media-breakpoint-up(md) {
                 gap: 20px;
@@ -288,12 +285,10 @@
         gap: 24px;
 
         a {
-            @include media-breakpoint-up(md) {
-                width: inherit;
-              }
             text-decoration: none;
             padding-left: inherit;
             padding-right: inherit;
+            width: 312px;
         }
 
         .catalog-item {
@@ -309,21 +304,16 @@
             /* Dropshadow */
             box-shadow: 0px 2px 3px 0px rgba(18, 38, 49, 0.15);
 
-            @include media-breakpoint-up(md) {
-                width: 312px;
-            }
-
             .program-image-and-badge {
+                display: flex;
                 position: relative;
+                justify-content: center;
                 height: 142px;
                 width: 100%;
             }
 
             img {
-                @include media-breakpoint-down(sm) {
-                    width: 100%;
-                }
-                width: inherit;
+                width: 100%;
                 height: 142px;
                 border-radius: 5px 5px 0px 0px;
                 background: rgba(0, 0, 0, 0.20);
