something in setting is busted

--- a/frontend/public/scss/variables.scss
+++ b/frontend/public/scss/variables.scss
@@ -42,3 +42,5 @@ $sirocco: #465a5b;
 $brand-button-bg: #a41e34;
 $brand-lighter-bg: #c5264e;
 $brand-darker-bg: #a31f34;
+
+$home-page-header-blue: #03152D;
