--- a/cms/templates/home_page.html
+++ b/cms/templates/home_page.html
@@ -18,35 +18,77 @@
     </div>
   </div>
 </div>
-<div class="course-section">
-  <div class="container">
-    {% if product_cards_section_title %}
-      <h1>{{ product_cards_section_title }}</h1>
-    {% endif %}
-    <ul class="course-listing card-listing">
-      {% for product in products %}
-      <li>
-        <div class="course-card highlight-card clickable">
-          <a href="{{ product.url_path }}" class="course-card-link">
-            <img src="{% feature_img_src product.feature_image %}" alt="">
-            <div class="course-info">
-              <h2 class="course-card-title">
-                  {{ product.title }}
-              </h2>
-              <div class="course-card-description">
-                {{ product.description | richtext }}
-              </div>
-              {% if product.start_date %}
-                <span class="date">
-                  Start date: {{ product.start_date | date:"F j, Y" }}
-                </span>
+  {{ show_new_featured_carousel }}
+{% if show_new_featured_carousel %}
+  <div class="featured-product-section">
+    <div class="container">
+      {% if product_cards_section_title %}
+        <h1>{{ product_cards_section_title }}</h1>
+      {% endif %}
+      <ul class="featured-product-listing card-listing">
+        {% for product in products %}
+        <li>
+          <div class="featured-product-card highlight-card clickable">
+            <a href="{{ product.url_path }}" class="featured-product-card-link">
+              <img src="{% feature_img_src product.feature_image %}" alt="">
+              {% if show_new_featured_carousel and product.is_program and product.program_type %}
+                <span class="badge badge-program-type">{{ product.program_type }}program</span>
               {% endif %}
-            </div>
-          </a>
-        </div>
-      </li>
-      {% endfor %}
-    </ul>
+              <div class="featured-product-info">
+                {% if product.start_date and not product.is_program and show_new_featured_carousel %}
+                  <span class="date">
+                    Starts {{ product.start_date | date:"F j, Y" }}
+                  </span>
+                {% elif not product.is_program %}
+                  <span class="date">
+                    Start Anytime
+                  </span>
+                {% endif %}
+                <h2 class="featured-product-card-title">
+                    {{ product.title }}
+                </h2>
+                <div class="featured-product-card-description">
+                  {{ product.description | richtext }}
+                </div>
+              </div>
+            </a>
+          </div>
+        </li>
+        {% endfor %}
+      </ul>
+    </div>
   </div>
-</div>
+{% else %}
+  <div class="course-section">
+    <div class="container">
+      {% if product_cards_section_title %}
+        <h1>{{ product_cards_section_title }} potato</h1>
+      {% endif %}
+      <ul class="course-listing card-listing">
+        {% for product in products %}
+        <li>
+          <div class="course-card highlight-card clickable">
+            <a href="{{ product.url_path }}" class="course-card-link">
+              <img src="{% feature_img_src product.feature_image %}" alt="">
+              <div class="course-info">
+                <h2 class="course-card-title">
+                    {{ product.title }}
+                </h2>
+                <div class="course-card-description">
+                  {{ product.description | richtext }}
+                </div>
+                {% if product.start_date %}
+                  <span class="date">
+                    Start date: {{ product.start_date | date:"F j, Y" }}
+                  </span>
+                {% endif %}
+              </div>
+            </a>
+          </div>
+        </li>
+        {% endfor %}
+      </ul>
+    </div>
+  </div>
+{% endif %}
 {% endblock %}
