--- a/cms/templates/product_page.html
+++ b/cms/templates/product_page.html
@@ -15,6 +15,13 @@
         <div class="row d-flex flex-row">
           <div class="col flex-grow-1" id="product-details">
             <div class="text">
+              {% if page.is_program_page %}
+                {% if page.product.program_type %}
+                <p class="program-type-badge">
+                  <span class="badge badge-dark badge-program-type">{{ page.product.program_type }}</span>
+                </p>
+                {% endif %}
+              {% endif %}
               <h1>{{ page.title }}</h1>
               {# Description field contents are already rendered wrapped in a <p> tag #}
               
@@ -38,27 +45,54 @@
 
               {% if page.is_program_page %}
               <section class="program-courses-container" id="program-courses">
-                <h2>Core</h2>
+                {% if page.product.required_courses %}
+                <h2>{{ page.product.required_title }}</h2>
 
                 <ul>
-                  {% for course in page.product.courses %}
+                  {% for course in page.product.required_courses %}
                   <li> 
-                    <div class="card w-33 program-course-card">
+                    <div class="program-course-card">
                       <img src="{% feature_img_src member.feature_image %}" alt="">
                       <div class="program-course-card-info">
                         <h4 class="startdate">
-                          {% if course.0.first_unexpired_run.start_date %}
-                            Starts {{ course.0.first_unexpired_run.start_date }}
+                          {% if course.first_unexpired_run.start_date %}
+                            Starts {{ course.first_unexpired_run.start_date }}
                           {% else %}
                             Starts Anytime 
                           {% endif %}
                         </h4>
-                        <h3 class="title">{{ course.0.title }}</h3>
+                        <h3 class="title">{{ course.title }}</h3>
                       </div>
                     </div>
                   </li>
                   {% endfor %}
                 </ul>
+                {% endif %}
+
+                {% if page.product.elective_courses %}
+                <h2 class="electives-title">{{ page.product.elective_title }}</h2>
+
+                <ul>
+                  {% for course in page.product.elective_courses %}
+                  <li> 
+                    <div class="program-course-card">
+                      <img src="{% feature_img_src member.feature_image %}" alt="">
+                      <div class="program-course-card-info">
+                        <h4 class="startdate">
+                          {% if course.first_unexpired_run.start_date %}
+                            Starts {{ course.first_unexpired_run.start_date }}
+                          {% else %}
+                            Starts Anytime 
+                          {% endif %}
+                        </h4>
+                        <h3 class="title">{{ course.title }}</h3>
+                      </div>
+                    </div>
+                  </li>
+                  {% endfor %}
+                </ul>
+                {% endif %}
+
               </section>
               {% endif %}
 
@@ -93,6 +127,7 @@
               </section>
               {% endif %}
 
+              {% if page.is_course_page %} 
               <section class="ofac-message border">
                 <div class="container">
                   <h2>Who can take this course?</h2>
@@ -100,7 +135,7 @@
                   <p>Because of U.S. Office of Foreign Assets Control (OFAC) restrictions and other U.S. federal regulations, learners residing in one or more of the following countries or regions will not be able to register for this course: Iran, Cuba, Syria, North Korea and the Crimea, Donetsk People's Republic and Luhansk People's Republic regions of Ukraine.</p>
                 </div>
               </section>
-        
+              {% endif %}
             </div>
           </div>
           <div class="col" id="product-info-box">
